--- a/config_sample.ini
+++ b/config_sample.ini
@@ -1,16 +1,10 @@
 ; 設定範例 需改名為 config.ini
 [MONGO_BACKUP]
-### 預設為關閉 => 0: 關閉 1: 開啟 
+### 預設為關閉 => 0: 關閉 1: 開啟
 ; ******匯出功能******
 ; MONGO_DUMP=1
 ; ******匯入功能******
 ; MONGO_RESTORE=1
-; ******清空集合資料功能******
-; DELETE_COLLECTIONS_DOCUMENTS=1
-### 預設讀取 MONGO_DB  => 預計刪除資料的集合所屬的資料庫
-; DELETE_DB=
-### 預設讀取 MONGO_COLLECTIONS => 預計刪除資料的集合
-; DELETE_COLLECTIONS=[""]
 
 ; ******匯出主機******
 ### 預設:127.0.0.1:27017
@@ -32,8 +26,16 @@
 ### 預設為關閉 => 0: 關閉 1: 開啟  匯入前刪除collection
 ; DROP_COLLECTIONS=1
 
+### 預設為關閉 => 0: 關閉 1: 開啟  清空集合資料功能
+; DELETE_COLLECTIONS_DOCUMENTS=1
+### 預設讀取 MONGO_DB  => 預計刪除資料的集合所屬的資料庫
+; DELETE_DB=
+### 預設讀取 MONGO_COLLECTIONS => 預計刪除資料的集合
+; DELETE_COLLECTIONS=[""]
+
+
 ; ******目標資料設定******
-### 無預設 
+### 無預設
 # 資料庫
 MONGO_DB=db
 # 集合
